--- a/css/styles.css
+++ b/css/styles.css
@@ -867,6 +867,12 @@ Single Page
   text-transform: uppercase;
   color: var(--clr-primary-5);
 }
+.page-center p {
+  max-width: 43.75rem;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
 
 /*
 =============== 
