--- a/css/styles.css
+++ b/css/styles.css
@@ -601,7 +601,7 @@ Connect
 }
 .video-banner {
   padding: 3rem 5rem 12rem 5rem;
-  width: 40rem;
+  max-width: 40rem;
   background: var(--clr-primary-10);
   text-align: center;
   -webkit-clip-path: polygon(
@@ -871,7 +871,6 @@ Single Page
   max-width: 43.75rem;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 /*
