--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,6 @@ p {
   letter-spacing: var(--spacing);
   display: inline-block;
   font-weight: 700;
-  -webkit-transition: var(--transition);
   transition: var(--transition);
   font-size: 0.875rem;
   border: 2px solid transparent;
@@ -194,7 +193,8 @@ p {
   position: relative;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: var(--radius);
 }
 .img-container {
@@ -293,7 +293,8 @@ Navbar
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     justify-self: end;
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
   .nav-link {
     text-transform: capitalize;
@@ -467,7 +468,8 @@ Services
   .services-center {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 }
 @media screen and (min-width: 992px) {
@@ -516,7 +518,8 @@ Projects
 }
 .project-img {
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: var(--radius);
   transition: var(--transition);
 }
@@ -545,7 +548,8 @@ Projects
   .projects-center {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 }
 @media screen and (min-width: 992px) {
@@ -569,7 +573,8 @@ Connect
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   z-index: -2;
 
   -webkit-clip-path: polygon(
@@ -689,7 +694,8 @@ Skills
   .skills-center {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
   .skill {
     margin-bottom: 0;
@@ -777,7 +783,8 @@ Blog
   left: 0;
   width: 100%;
   height: 100%;
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   border-radius: var(--radius);
   /* manual prefixes for iphone rotation */
   -webkit-transform: translate3d(0, 0, 0);
@@ -798,7 +805,8 @@ Blog
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
   height: 13rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .blog-card-footer {
   display: grid;
@@ -825,7 +833,8 @@ Blog
 .blog-card-footer img {
   width: 2rem;
   height: 2rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 50%;
 }
 
@@ -911,7 +920,8 @@ Products Page
 }
 .project-card-img {
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
 }
